Was unable to integrate Blackjack as a module, switched it to the client-side :(

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,25 @@
     <title>BlackjackJs ♧ ♢ ♡ ♤</title>
 </head>
 <body>
-    <h1 id="Main title"> ♤ ♡ ♢ ♧ BLACKJACK ♧ ♢ ♡ ♤ </h1>
+    <h1 class="main title"> ♤ ♡ ♢ ♧ BLACKJACK ♧ ♢ ♡ ♤ </h1>
+
+    <div class="container" id="players-input">
+        <div class="container", id="number-of-players-input">
+            <h2>Select number of players:</h2>
+            <button class="button">2</button>
+            <button class="button">3</button>
+            <button class="button">4</button>
+        </div>
+        <div class="container" id="players-names-input">
+
+        </div>
+    </div>
+
+    <div class="container" id="players-decks">
+
+    </div>
+
+
+    <script type="module" src ="js/Blackjack.js"></script>
 </body>
 </html>
