--- a/public/index.html
+++ b/public/index.html
@@ -7,25 +7,53 @@
     <link rel="stylesheet" href="css/style.css">
     <title>BlackjackJs ♧ ♢ ♡ ♤</title>
 </head>
-<body>
+<body id="body">
     <h1 class="main title"> ♤ ♡ ♢ ♧ BLACKJACK ♧ ♢ ♡ ♤ </h1>
 
-    <div class="container" id="players-input">
-        <div class="container", id="number-of-players-input">
-            <h2>Select number of players:</h2>
-            <button class="button">2</button>
-            <button class="button">3</button>
-            <button class="button">4</button>
+    <div class="container">
+        <div class="container">
+            <h2>Add players (Min 2 Max 4):</h2>
+            <input id="player-name-input" type="Text">
+            <button class="button" id="number-of-players-input">Add player</button>
         </div>
-        <div class="container" id="players-names-input">
-
+        <div class="container" id="players-checkout">
         </div>
     </div>
 
-    <div class="container" id="players-decks">
+    <div id = "start-button">
+        
+    </div>
+
+    <div id = "deck-handler">
+        <h3 id="player-in-turn">NamePlaceholder</h3>
+        <button>Take a card</button>
+        <button>Freeze!</button>
+    </div>
+
+    <div class="deck-table" id="players-decks">
+
+       <div id="Player_1"> 
+            <div id="cards-placeholder">cartas</div>
+            <div id="info-placeholder">nombre, info</div>
+        </div>
+
+       <div id="Player_2"> <div>cartas</div>
+       <div>nombre, info</div>
+       <button>coger carta</button></div>
+
+       <div id="Player_3"> <div>cartas</div>
+       <div>nombre, info</div>
+       <button>coger carta</button></div>
+
+       <div id="Player_4"> <div>cartas</div>
+       <div>nombre, info</div>
+       <button>coger carta</button></div>
 
     </div>
 
+    <div id="button-end-placeholder">
+
+    </div>
 
     <script type="module" src ="js/Blackjack.js"></script>
 </body>
