CSS styling is done, user playing implementation is still pendin

--- a/public/index.html
+++ b/public/index.html
@@ -8,46 +8,30 @@
     <title>BlackjackJs ♧ ♢ ♡ ♤</title>
 </head>
 <body id="body">
-    <h1 class="main title"> ♤ ♡ ♢ ♧ BLACKJACK ♧ ♢ ♡ ♤ </h1>
+    <h1 class="main-title"> <span>♤</span> <span>♡</span> <span>♢</span> <span>♧</span> BLACKJACK <span>♧</span> <span>♢</span> <span>♡</span> <span>♤</span> </h1>
 
-    <div class="container">
-        <div class="container">
+    <div class="wrap-playersCheckout">
+        <div class="add-players">
             <h2>Add players (Min 2 Max 4):</h2>
             <input id="player-name-input" type="Text">
             <button class="button" id="number-of-players-input">Add player</button>
         </div>
-        <div class="container" id="players-checkout">
+        <div class="players-checkout" id="players-checkout">
         </div>
     </div>
 
-    <div id = "start-button">
+    <div id="start-button">
         
     </div>
 
     <div id = "deck-handler">
         <h3 id="player-in-turn">NamePlaceholder</h3>
-        <button>Take a card</button>
-        <button>Freeze!</button>
+        <button id="take-card">Take a card</button>
+        <button id="freeze">Freeze!</button>
     </div>
 
     <div class="deck-table" id="players-decks">
 
-       <div id="Player_1"> 
-            <div id="cards-placeholder">cartas</div>
-            <div id="info-placeholder">nombre, info</div>
-        </div>
-
-       <div id="Player_2"> <div>cartas</div>
-       <div>nombre, info</div>
-       <button>coger carta</button></div>
-
-       <div id="Player_3"> <div>cartas</div>
-       <div>nombre, info</div>
-       <button>coger carta</button></div>
-
-       <div id="Player_4"> <div>cartas</div>
-       <div>nombre, info</div>
-       <button>coger carta</button></div>
 
     </div>
 
